Sticky image menu

--- a/app/public/wp-content/themes/foce-child/assets/css/theme.scss
+++ b/app/public/wp-content/themes/foce-child/assets/css/theme.scss
@@ -54,7 +54,7 @@ $flexColum: column;
 
 
 /* Overflow hidden */
-#primary, #showMenu, .banner, .big_cloud_container {
+#showMenu, .big_cloud_container {
     overflow: $overflowHidden
 }
 
@@ -158,7 +158,7 @@ $flexColum: column;
                     ::before {
                         top: -4em;
                         left: -2em;                        
-                        background-image: url(http://koukaki.local/wp-content/themes/foce/assets/images/orchid.png);                        
+                        background-image: url(../../../foce/assets/images/orchid.png);                        
                         width: 5em; 
                         height: 5em;   
                         @include animation10seconds;              
@@ -167,7 +167,7 @@ $flexColum: column;
                     ::after {
                         top: -3em;
                         right: 5em;                        
-                        background-image: url(http://koukaki.local/wp-content/themes/foce/assets/images/sunflower.png);                        
+                        background-image: url(../../../foce/assets/images/sunflower.png);                        
                         width: 5em; 
                         height: 5em;   
                         @include animation10seconds; 
@@ -178,14 +178,14 @@ $flexColum: column;
                     ::before {
                         top: -1em;
                         left: 7em;                        
-                        background-image: url(http://koukaki.local/wp-content/themes/foce-child/assets/img/cat1.png);                        
+                        background-image: url(http://koukaki.local../img/cat1.png);                        
                         width: 3em; 
                         height: 3em;
                     }
 
                     ::after {
                         right: -1.3em;                        
-                        background-image: url(http://koukaki.local/wp-content/themes/foce/assets/images/random_flower.png);                        
+                        background-image: url(../../../foce/assets/images/random_flower.png);                        
                         width: 2em; 
                         height: 2em;                        
                         animation: rotation 5s infinite linear
@@ -194,7 +194,7 @@ $flexColum: column;
                 
                 &.black_cat {
                     ::before {
-                        background-image: url(http://koukaki.local/wp-content/themes/foce-child/assets/img/flower_orange.png);
+                        background-image: url(http://koukaki.local../img/flower_orange.png);
                         width: 2em; 
                         height: 2em; 
                         left: 8em;
@@ -203,7 +203,7 @@ $flexColum: column;
                     }
 
                     ::after {
-                        background-image: url(http://koukaki.local/wp-content/themes/foce-child/assets/img/cat3.png);
+                        background-image: url(http://koukaki.local../img/cat3.png);
                         width: 3.5em; 
                         height: 3.5em; 
                         right: 10em;
@@ -213,7 +213,7 @@ $flexColum: column;
 
                 &.red_flower {
                     ::before {
-                        background-image: url(http://koukaki.local/wp-content/themes/foce-child/assets/img/cat2.png);
+                        background-image: url(http://koukaki.local../img/cat2.png);
                         width: 2.5em; 
                         height: 2.5em; 
                         left: 0;
@@ -221,7 +221,7 @@ $flexColum: column;
                     }
 
                     ::after {
-                        background-image: url(http://koukaki.local/wp-content/themes/foce-child/assets/img/hibiscus.png);
+                        background-image: url(http://koukaki.local../img/hibiscus.png);
                         width: 12em; 
                         height: 12em; 
                         right: -5em;
@@ -382,19 +382,22 @@ footer {
     position: relative;
     display: flex;
     justify-content: center;
-    background-image: url("/wp-content/themes/foce/assets/images/banner.png");    
+    background-image: url("../../../foce/assets/images/banner.png");    
 
     @media screen and (min-width: 601px) {
-        min-height: 900px;
         img {
             @include marginAuto;
+            position: sticky;
+            top: 8em;
         }        
 
         video {
             @include opacity(1);
-            width: 100vw;
+            width: 100%;
             object-fit: cover;
             position: absolute;
+            top: 0;
+            left: 0;
         } 
     }
 
@@ -417,7 +420,7 @@ footer {
     width:95%;
 
     div {
-        background-image: url("/wp-content/themes/foce-child/assets/img/orange_nomination_bg.png");
+        background-image: url("../img/orange_nomination_bg.png");
         background-repeat: no-repeat;
         background-size: contain;
         background-position: center;
@@ -465,7 +468,7 @@ footer {
 /* -- STORY -- */
 .story { 
     #place {
-        background-image: url(/wp-content/themes/foce-child/assets/img/Studio_Koukaki-image_place.png);
+        background-image: url(../img/Studio_Koukaki-image_place.png);
         
         .big_cloud_container {
             @include absolute;
