--- a/app/public/wp-content/themes/foce-child/assets/css/theme.scss
+++ b/app/public/wp-content/themes/foce-child/assets/css/theme.scss
@@ -404,11 +404,11 @@ footer {
             animation-timing-function: ease-in-out;
             
             @keyframes floating {
-                0% { transform: translate(0,  0px); }
+                0% { transform: translate(0px,  0px); }
                 25% { transform: translate(-10px,  10px); }
                 50%  { transform: translate(8px, 15px); }
                 75% { transform: translate(-10px,  10px); }
-                100%   { transform: translate(0, -0px); }    
+                100%   { transform: translate(0px, -0px); }    
             }
         }        
        
